Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <header class="header">
-  <h1>📊 Dashboard de Grupos</h1>
+  <h1>📊 Dashboard de Grupos1</h1>
 
   <div class="filters">
     <select id="mes">
