--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 <body>
 
 <header>
-  <h1>📊 Dashboard General</h1>
+  <h1>📊 Dashboard General de Grupos</h1>
 </header>
 
 <section class="kpis">
   <div class="kpi">
-    <span>Total Grupos</span>
+    <span>Total de Grupos</span>
     <strong id="totalGrupos">0</strong>
   </div>
   <div class="kpi">
-    <span>Grupos Abiertos</span>
-    <strong id="gruposAbiertos">0</strong>
+    <span>Grupos Abiertos (Año)</span>
+    <strong id="gruposAbiertos">74</strong>
   </div>
   <div class="kpi">
-    <span>Grupos Cerrados</span>
-    <strong id="gruposCerrados">0</strong>
+    <span>Grupos Cerrados (Año)</span>
+    <strong id="gruposCerrados">33</strong>
   </div>
   <div class="kpi">
-    <span>Total Sedes</span>
+    <span>Total de Sedes</span>
     <strong id="totalSedes">0</strong>
   </div>
 </section>
