--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </header>
 
 <section class="cards">
-  <div class="card" id="totalHermanos">0<br><span>Hermanos</span></div>
-  <div class="card" id="totalNinos">0<br><span>Niños</span></div>
-  <div class="card" id="totalGrupos">0<br><span>Grupos</span></div>
-  <div class="card" id="totalSedes">0<br><span>Sedes</span></div>
+  <div class="card" id="cardGrupos">0<span>Grupos</span></div>
+  <div class="card" id="cardAbiertos">0<span>Grupos Abiertos</span></div>
+  <div class="card" id="cardCerrados">0<span>Grupos Cerrados</span></div>
+  <div class="card" id="cardSedes">0<span>Sedes</span></div>
 </section>
 
 <section class="filters">
@@ -24,7 +24,7 @@
 </section>
 
 <section class="table-container">
-  <table id="tablaAsistencia">
+  <table>
     <thead id="thead"></thead>
     <tbody id="tbody"></tbody>
   </table>
@@ -32,6 +32,5 @@
 
 <script src="js/data-asistencia.js"></script>
 <script src="js/asistencia.js"></script>
-
 </body>
 </html>
