--- a/index.html
+++ b/index.html
@@ -2,25 +2,38 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard Grupos & Asistencia</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Dashboard de Grupos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header class="topbar">
-  <h1>Dashboard</h1>
-  <div class="tabs">
-    <button class="tab active" data-view="grupos">Grupos</button>
-    <button class="tab" data-view="asistencia">Asistencia</button>
-  </div>
+<header>
+  <h1>📊 Dashboard General de Grupos</h1>
 </header>
 
-<section class="kpis" id="kpis"></section>
+<section class="kpis">
+  <div class="kpi">
+    <span>Total de Grupos</span>
+    <strong id="totalGrupos">0</strong>
+  </div>
+  <div class="kpi">
+    <span>Grupos Abiertos (Año)</span>
+    <strong id="gruposAbiertos">74</strong>
+  </div>
+  <div class="kpi">
+    <span>Grupos Cerrados (Año)</span>
+    <strong id="gruposCerrados">33</strong>
+  </div>
+  <div class="kpi">
+    <span>Total de Sedes</span>
+    <strong id="totalSedes">0</strong>
+  </div>
+</section>
 
-<main id="content"></main>
+<main id="dashboard"></main>
 
-<script src="js/data-grupos.js"></script>
-<script src="js/data-asistencia.js"></script>
-<script src="js/app.js"></script>
+<script src="data.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
