--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <header>
   <h1>📊 Dashboard General de Grupos</h1>
+  <a href="asistencia/index.html" class="btn-link">
+    👉 Ver Asistencia
+  </a>
 </header>
+
 
 <section class="kpis">
   <div class="kpi">
