--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <main id="dashboard"></main>
 
-<script src="data.js"></script>
-<script src="app.js"></script>
+<script src="grupos/data.js"></script>
+<script src="grupos/app.js"></script>
 </body>
 </html>
