--- a/asistencia/index.html
+++ b/asistencia/index.html
@@ -26,7 +26,7 @@
 
 <main id="dashboard"></main>
 
-<script src="data.js"></script>
-<script src="app.js"></script>
+<script src="asistencia/data.js"></script>
+<script src="asistencia/app.js"></script>
 </body>
 </html>
