--- a/asistencia/index.html
+++ b/asistencia/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard de Asistencia1</title>
+  <title>Dashboard de Asistencia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 
 <header>
-  <h1>✅ Dashboard de Asistencia</h1>
+  <h1>✅ Dashboard de Asistencia1</h1>
   <a href="../index.html" class="btn-link">⬅ Volver a Grupos</a>
 </header>
 
