--- a/asistencia/index.html
+++ b/asistencia/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <h1>✅ Dashboard de Asistencia1</h1>
+  <h1>✅ Dashboard de Asistencia</h1>
   <a href="../index.html" class="btn-link">⬅ Volver a Grupos</a>
 </header>
 
