--- a/asistencia/index.html
+++ b/asistencia/index.html
@@ -4,25 +4,13 @@
   <meta charset="UTF-8">
   <title>Dashboard de Asistencia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-  <h1>✅ Dashboard de Asistencia</h1>
-  <a href="../index.html" class="btn-link">⬅ Volver a Grupos</a>
+  <h1>👥 Dashboard de Asistencia</h1>
 </header>
-
-<section class="kpis">
-  <div class="kpi">
-    <span>Total Asistentes</span>
-    <strong id="totalAsistentes">0</strong>
-  </div>
-  <div class="kpi">
-    <span>Total Ausentes</span>
-    <strong id="totalAusentes">0</strong>
-  </div>
-</section>
 
 <main id="dashboard"></main>
 
