--- a/asistencia/index.html
+++ b/asistencia/index.html
@@ -9,8 +9,16 @@
 <body>
 
 <header>
-  <h1>👥 Dashboard de Asistencia</h1>
+  <h1>👥 Dashboard General de Asistencia</h1>
 </header>
+
+<!-- 
+  Se mantiene la estructura de KPIs
+  aunque por ahora no se usen
+-->
+<section class="kpis">
+  <!-- Vacío intencionalmente para mantener layout -->
+</section>
 
 <main id="dashboard"></main>
 
