--- a/asistencia/index.html
+++ b/asistencia/index.html
@@ -2,23 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard de Asistencia1</title>
+  <title>Dashboard de Asistencia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 
 <header>
-  <h1>👥 Dashboard General de Asistencia</h1>
-</header>
+  <h1>👥 Dashboard de Asistencia</h1>
 
-<!-- 
-  Se mantiene la estructura de KPIs
-  aunque por ahora no se usen
--->
-<section class="kpis">
-  <!-- Vacío intencionalmente para mantener layout -->
-</section>
+  <!-- BOTÓN SUPERIOR (NO CAMBIA VISTAS INTERNAS) -->
+  <nav>
+    <a href="../grupos/index.html" class="nav-btn">📊 Ver Grupos</a>
+  </nav>
+</header>
 
 <main id="dashboard"></main>
 
