--- a/asistencia/index.html
+++ b/asistencia/index.html
@@ -13,7 +13,7 @@
 
   <!-- BOTÓN SUPERIOR (NO CAMBIA VISTAS INTERNAS) -->
   <nav>
-    <a href="../grupos/index.html" class="nav-btn">📊 Ver Grupos</a>
+    <a href="../index.html" class="nav-btn">📊 Ver Grupos</a>
   </nav>
 </header>
 
