--- a/asistencia/index.html
+++ b/asistencia/index.html
@@ -9,12 +9,10 @@
 <body>
 
 <header>
-  <h1>👥 Dashboard de Asistencia</h1>
-
-  <!-- BOTÓN SUPERIOR (NO CAMBIA VISTAS INTERNAS) -->
-  <nav>
-    <a href="../index.html" class="nav-btn">📊 Ver Grupos</a>
-  </nav>
+  <h1>📊 Dashboard General de Grupos</h1>
+  <a href="index.html" class="btn-link">
+    👉 Ver Grupos
+  </a>
 </header>
 
 <main id="dashboard"></main>
