--- a/asistencia/index.html
+++ b/asistencia/index.html
@@ -10,7 +10,7 @@
 
 <header>
   <h1>📊 Dashboard General de Grupos</h1>
-  <a href="index.html" class="btn-link">
+  <a href="../index.html" class="btn-link">
     👉 Ver Grupos
   </a>
 </header>
